infrastructure/workloads/overlays/payu-sit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payu-sit
  labels:
    app.kubernetes.io/part-of: payu
    environment: sit
    payu.fajjjar.my.id/ingress: shared
